--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,17 @@
   <head>
     <title>React App</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <!-- Bootstrap 5
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
 
+
+    <link rel="stylesheet" href="styles.css" />
+    
 
   </head>
   <body>
-    <script src="./src/index.js" type="text/jsx"></script>
+     
     <div id="root"></div>
 
 
